add kafka doc